app/globals.css
@import "tailwindcss";

body {
  font-family: "poppins",sans-serif;
}

@layer components {
  .custom-shadow {
    @apply shadow-[0_0_22px_rgba(0,0,0,0.1)]
  }
}

@layer components {
  .primary-btn {
    @apply font-semibold px-6 py-3 rounded-full bg-orange-600 text-white
    hover:!scale-110 hover:!shadow-xl duration-300;
  }
}

@layer base {
  .container {
    @apply mx-auto px-4 sm:px-8 lg:px-16 xl:px-20 2xl:px-24;
  }
}

@layer utilities {
  .bg-primary {
    background-color: #28a745;
  }

  .text-primary {
    color: #28a745;
  }

  .bg-secondary {
    background-color: #0063ff;
  }

  .text-secondary {
    color: #0063ff;
  }

  .bg-hero-image {
    background-image: url('/images/bgimage.jpg');
  }

}

